fix: income, expense, period APIs does not parse path parameters
